--- a/Students/pom.xml
+++ b/Students/pom.xml
@@ -35,6 +35,11 @@
   		<version>4.2.5.RELEASE</version>
   	</dependency>
   	<dependency>
+  		<groupId>org.springframework</groupId>
+  		<artifactId>spring-web</artifactId>
+  		<version>4.2.5.RELEASE</version>
+  	</dependency>
+  	<dependency>
   		<groupId>com.fasterxml.jackson.core</groupId>
   		<artifactId>jackson-databind</artifactId>
   		<version>2.2.3</version>
